# gpgpu_plugins

./: .gitignore  CMakeLists.txt  README.md
include/: constants.h
src/: CMakeLists.txt  Makefile  constants.h  has_cuda_gpu.cu  has_opencl_gpu.cpp  helpers.cpp  helpers.h  main.cpp  orderedMap.cpp  orderedMap.h  plugin.cpp  plugin.h  pluginEngine.cpp  pluginEngine.h
src/main/: CMakeLists.txt  Makefile  README.md  main.cpp  orderedMap.cpp  orderedMap.h  plugin.cpp  plugin.h  pluginEngine.cpp  pluginEngine.h
src/plugins/: CMakeLists.txt  Makefile  README.md  graph.cpp  graph.cu  graph.h  hello.c  matrix.cpp  matrix.cu  matrix.h  pluginHeader.h  prime.cpp  prime.cu  stub.cpp
src/plugins/include/: pluginHeader.h
src/plugins/tests/: generate_matrices.rb  run_tests.rb
src/plugins/tests/data/graph/: graphFormat.txt  simpleExpectedBFS.txt
src/plugins/tests/data/matrix/: matrix1000_1000A.txt  matrix100_100A.txt  matrix100_100B.txt  matrix300_300A.txt  matrix300_300B.txt  matrix300_300C.txt  matrixSimpleB.txt
tests/: README.md  run_tests.rb
tests/data/graph/: simple.txt  simpleExpectedAPSP.txt  simpleExpectedSSSP.txt
tests/data/matrix/: matrix1000_1000B.txt  matrix100_100C.txt  matrix3_3A.txt  matrix3_3B.txt  matrix3_3C.txt  matrixFormat.txt  matrixSimpleA.txt  matrixSimpleC.txt
